added table row

--- a/source/infos.html
+++ b/source/infos.html
@@ -70,6 +70,9 @@
                          <tr>
                               <td>6</td> <td>Ansys</td> <td>Ansys software is a powerful engineering simulation software. It is used to simulate the behavior of physical systems under various conditions. Ansys software is used in a wide range of industries, including aerospace, automotive, electronics, and manufacturing.</td>
                          </tr>
+                         <tr>
+                              <td>6</td> <td>test</td> <td>Ansys software is a powerful engineering simulation software. It is used to simulate the behavior of physical systems under various conditions. Ansys software is used in a wide range of industries, including aerospace, automotive, electronics, and manufacturing.</td>
+                         </tr>
                          
                     </table>
                </div>
