--- a/source/infos.html
+++ b/source/infos.html
@@ -73,6 +73,7 @@
                     <p>
                          Due to the geographical policies of some countries, they are always changing.
                     </p>
+
                <h2>Asia:</h2>
                <p>
                          Asia is a very diverse continent, with a wide range of cultures, languages, and religions. It is also a very populous continent, with some of the world's largest cities, including Tokyo, Shanghai, and Delhi.
@@ -152,7 +153,7 @@
           </div>
 
           <!----- tables section ----->
-          <div class="section">    <h2>The 10 largest countries in the world by area, with their continent</h2>
+          <div class="section">    <h2>The largest countries in the world by area, with their continent</h2>
                <p>
                     here is the table info of larges countries by Area theme.
                </p>
@@ -195,10 +196,10 @@
                </div>
                     <h2>Oceans in the world:</h2>
                     <p>
-                         The Pacific Ocean is by far the largest ocean, covering about one-third of the Earth's surface. The Atlantic Ocean is the second largest, followed by the Indian Ocean, and Southern Ocean.
+                         Pacific Ocean, Atlantic Ocean, Inndian Ocean and Southern Ocean.
                     </p>
                     <p>
-                         Pacific Ocean, Atlantic Ocean, Inndian Ocean and Southern Ocean.
+                         The Pacific Ocean is by far the largest ocean, covering about one-third of the Earth's surface. The Atlantic Ocean is the second largest, followed by the Indian Ocean, and Southern Ocean.
                     </p>
           </div>
 
@@ -260,11 +261,67 @@
           </div>
 
           <div class="section">
-               <h2>tilte:</h2>
+               <h2>The largest countries in the world by technology, with their continent:</h2>
                <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat corrupti pariatur saepe debitis nulla sapiente. Sapiente, laboriosam rerum? Facere, in! Voluptate, iste voluptatibus! Qui sed asperiores nemo corporis! Illum, reiciendis.
                </p>
-               
+               <div class="table">
+                    <table>
+                         <tr>
+                              <th>Rank</th> <th>Country</th> <th>continent</th> <th>info</th>
+                         </tr>
+                         <tr>
+                              <td>1</td> <td>United States</td> <td>North America</td> <td>The United States is home to some of the world's largest and most innovative tech companies, such as Apple, Amazon, and Google. It is also a global leader in research and development.</td>
+                         </tr>
+                         <tr>
+                              <td>2</td> <td>China</td> <td>Asia</td> <td>China is investing heavily in technology, and its tech companies are becoming increasingly competitive on the global stage.</td>
+                         </tr>
+                         <tr>
+                              <td>3</td> <td>Japan</td> <td>Asia</td> <td>Japan is a leader in robotics and other advanced manufacturing technologies.</td>
+                         </tr>
+                         <tr>
+                              <td>4</td> <td>South Krea</td> <td>Asia</td> <td>South Korea is a leader in semiconductors and consumer electronics.</td>
+                         </tr>
+                         <tr>
+                              <td>5</td> <td>Russia</td> <td>Asia</td> <td>Russia is also largest and research and development.</td>
+                         </tr>
+                         <tr>
+                              <td>6</td> <td>Germany</td> <td>Europe</td> <td>Germany is a leader in engineering and industrial automation.</td>
+                         </tr>
+                         <tr>
+                              <td>7</td> <td>Taiwan</td> <td>Asia</td> <td>Taiwan is a leader in semiconductor manufacturing.</td>
+                         </tr>
+                         <tr>
+                              <td>8</td> <td>Finland</td> <td>Europe</td> <td>Finland is a leader in education and gaming.</td>
+                         </tr>
+                         <tr>
+                              <td>9</td> <td>Switzerland</td> <td>Europe</td> <td>Switzerland is a leader in precision engineering and watchmaking.</td>
+                         </tr>
+                         <tr>
+                              <td>10</td> <td>Iran</td> <td>Asia</td> <td>Iran is also a leader in robotics and other industrial manufacturing technologies.</td>
+                         </tr>
+                    </table>
+               </div>
+               <p>
+                    This list is based on a variety of factors, including a country's investment in research and development, its number of patents filed, its number of tech startups, and its overall technological infrastructure.
+               </p>
+
+               <h2>title:</h2>
+               <div class="table">
+                    <table>
+                         <tr>
+                              <th>#</th> <th>company</th> <th>country</th> <th>continent</th><th>definition</th>
+                         </tr>
+                         <tr>
+                              <td>1</td> <td>Microsoft</td> <td>United States</td> <td>North America</td> <td>example
+                              </td>
+                         </tr>
+                         
+                    </table>
+               </div>
+               <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque ex eum ea fugit iusto, aliquid iure neque velit omnis voluptates?
+               </p>
           </div>
      </main>   <span class="to_up"> &#8593; </span>
 
