desabled some section

--- a/source/web_design.html
+++ b/source/web_design.html
@@ -509,32 +509,32 @@
      <footer>  <h2>Our skills that we will aspire to in the future</h2>
           <div class="footer_content">
                <div class="footer_section">  <h2>we will learn together</h2>
-                    <li><a href="#">HTML CSS</a></li>
-                    <li><a href="#">JavaScript</a></li>
-                    <li><a href="#">Network</a></li>
-                    <li><a href="#">Databases</a></li>
-                    <li><a href="#">Frameworks</a></li>
+                    <li><a href="#" style="pointer-events: none;">HTML CSS</a></li>
+                    <li><a href="#" style="pointer-events: none;">JavaScript</a></li>
+                    <li><a href="#" style="pointer-events: none;">Network</a></li>
+                    <li><a href="#" style="pointer-events: none;">Databases</a></li>
+                    <li><a href="#" style="pointer-events: none;">Frameworks</a></li>
                </div>
                <div class="footer_section">  <h2>Our physical works</h2>
-                    <li><a href="#">Planing</a></li>
-                    <li><a href="#">Documentation</a></li>
-                    <li><a href="#">Painting</a></li>
-                    <li><a href="#">Installing cameras</a></li>
-                    <li><a href="#">Arduino</a></li>
+                    <li><a href="#" style="pointer-events: none;">Planing</a></li>
+                    <li><a href="#" style="pointer-events: none;">Documentation</a></li>
+                    <li><a href="#" style="pointer-events: none;">Painting</a></li>
+                    <li><a href="#" style="pointer-events: none;">Installing cameras</a></li>
+                    <li><a href="#" style="pointer-events: none;">Arduino</a></li>
                     
                </div>
                <div class="footer_section">  <h2>our social median</h2>
-                    <li><a href="#">YouTube</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Wechat</a></li>
-                    <li><a href="#">Telegram</a></li>
-                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#" style="pointer-events: none;">YouTube</a></li>
+                    <li><a href="#" style="pointer-events: none;">Facebook</a></li>
+                    <li><a href="#" style="pointer-events: none;">Wechat</a></li>
+                    <li><a href="#" style="pointer-events: none;">Telegram</a></li>
+                    <li><a href="#" style="pointer-events: none;">Twitter</a></li>
                     
                </div>
                <div class="footer_section">  <h2>about of our resources</h2>
-                    <li><a href="#">who are we?</a></li>
+                    <li><a href="#" style="pointer-events: none;">who are we?</a></li>
                     <li><a href="about/privacy_policy.html">privacy policy</a></li>
-                    <li><a href="about/content.html">who will we be?</a></li>
+                    <li><a href="#" style="pointer-events: none;">who will we be?</a></li>
                     <li><a href="about/contact.html">contact</a></li>
                </div>
           </div>
